BUG: 183273

Listening to the newly-added signal of ksmserver should avoid this behavior
when pc is turned off. Implementation still sucks, since it triggers an
unremovable inhibit without reason (yeah, no additional strings so that it can be
backported), but I'll think about something else a bit more polite, especially
when I'll refine inhibition with timeouts & friends.


svn path=/trunk/KDE/kdebase/workspace/; revision=923145