ksmserver/KSMServerInterface.h
@@ -42,6 +42,10 @@ public Q_SLOTS:
   Q_SCRIPTABLE void suspendStartup( QString );
   Q_SCRIPTABLE void resumeStartup( QString );
   Q_SCRIPTABLE void wmChanged();
+
+Q_SIGNALS:
+  Q_SCRIPTABLE void loggingOut( int, int, int );
+
 };
 
 #endif
